--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,34 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# React
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ------------
+
 ### Django ###
 *.log
 *.pot
